--- a/news-watcher/package.json
+++ b/news-watcher/package.json
@@ -21,11 +21,23 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/email-composer": "^4.5.2",
+    "@ionic-native/native-audio": "^4.5.2",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "@types/jquery": "^3.2.17",
+    "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.3",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-email-composer": "^0.8.12",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-nativeaudio": "^3.0.9",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "jquery": "^3.2.1",
     "rxjs": "5.5.2",
@@ -36,5 +48,21 @@
     "@ionic/app-scripts": "3.1.6",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-email-composer": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-nativeaudio": {}
+    },
+    "platforms": [
+      "browser",
+      "android"
+    ]
+  }
 }
